# pysimplewaves01

./: workflow.yml
.github/workflows/: main.yml
PySimpleWaves/: LICENSE  README.md  setup.cfg  setup.py
PySimpleWaves/tests/: testwave.py
PySimpleWaves/wave/: visualizer.py  wave.py
PySimpleWaves/wave/pysimplewaves.egg-info/: PKG-INFO  SOURCES.txt
PySimpleWaves/wave/utils/: gen.py  parser.py
