[metadata]
name = pysimplewaves
version = 0.0.1
author = nayef
author_email = nayefhaidir@outlook.co.id
description = simple wave modelling in python
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/
project_urls =
    Bug Tracker = https://gitlab.com/
    repository = https://gitlab.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = wave
packages = find:
python_requires = >=3.6

[options.packages.find]
where = wave